<resources>
    <string name="app_name">World Cup Schedule</string>
    <string name="action_finals">Knockout Phase</string>
    <string name="action_groups">Groups Phase</string>
    <string name="action_fan">Fan area</string>
    <string name="section_format">Group %1$s</string>

    <string name="russia">Russia</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="egypt">Egypt</string>
    <string name="uruguay">Uruguay</string>
    <string name="morocco">Morocco</string>
    <string name="ir_iran">IR Iran</string>
    <string name="portugal">Portugal</string>
    <string name="spain">Spain</string>
    <string name="france">France</string>
    <string name="australia">Australia</string>
    <string name="argentina">Argentina</string>
    <string name="iceland">Iceland</string>
    <string name="peru">Peru</string>
    <string name="denmark">Denmark</string>
    <string name="croatia">Croatia</string>
    <string name="nigeria">Nigeria</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="serbia">Serbia</string>
    <string name="germany">Germany</string>
    <string name="mexico">Mexico</string>
    <string name="brazil">Brazil</string>
    <string name="switzerland">Switzerland</string>
    <string name="sweden">Sweden</string>
    <string name="korea_republic">Korea Republic</string>
    <string name="belgium">Belgium</string>
    <string name="panama">Panama</string>
    <string name="tunisia">Tunisia</string>
    <string name="england">England</string>
    <string name="colombia">Colombia</string>
    <string name="japan">Japan</string>
    <string name="poland">Poland</string>
    <string name="senegal">Senegal</string>

    <string name="luzhniki_stadium">Luzhniki Stadium</string>
    <string name="ekaterinburg_arena">Ekaterinburg Arena</string>
    <string name="saint_petersburg_stadium">Saint Petersburg Stadium</string>
    <string name="fisht_stadium">Fisht Stadium</string>
    <string name="kazan_arena">Kazan Arena</string>
    <string name="spartak_stadium">Spartak Stadium</string>
    <string name="mordovia_arena">Mordovia Arena</string>
    <string name="kaliningrad_stadium">Kaliningrad Stadium</string>
    <string name="samara_arena">Samara Arena</string>
    <string name="rostov_arena">Rostov Arena</string>
    <string name="nizhny_novgorod_stadium">Nizhny Novgorod Stadium</string>
    <string name="volgograd_arena">Volgograd Arena</string>

    <string name="moscow">Moscow</string>
    <string name="ekaterinburg">Ekaterinburg</string>
    <string name="st_petersburg">St. Petersburg</string>
    <string name="sochi">Sochi</string>
    <string name="kazan">Kazan</string>
    <string name="saransk">Saransk</string>
    <string name="kaliningrad">Kaliningrad</string>
    <string name="samara">Samara</string>
    <string name="rostov_on_don">Rostov-On-Don</string>
    <string name="nizhny_novgorod">Nizhny Novgorod</string>
    <string name="volgograd">Volgograd</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="local_time">Local time</string>

    <string name="view_group_info">View Group Information</string>
    <string name="view_group_matches">View Group Matches</string>

    <string name="points">PTS</string>
    <string name="matches_played">MP</string>
    <string name="wins">W</string>
    <string name="loses">L</string>
    <string name="draws">D</string>

    <string name="round_of">Round of 16</string>
    <string name="quarter_finals">Quarter-finals</string>
    <string name="semi_finals">Semi-finals</string>
    <string name="third_place">Play-off for third place</string>
    <string name="finals">Final</string>
    <string name="today">Today matches</string>

    <string name="admob_app_id">ca-app-pub-8736689435854328~8553796224</string>
    <string name="test_device">1719D87B812E13DE895457EAE3B037BC</string>

    <string name="menu_today">Today</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_finals">Finals</string>
    <string name="menu_crowd">Crowd</string>

    <string name="five_world_titles">5 World Cup titles</string>
    <string name="four_world_titles">4 World Cup titles</string>
    <string name="two_world_titles">2 World Cup titles</string>
    <string name="one_world_titles">1 World Cup title</string>
    <string name="zero_world_titles">No World Cup titles</string>

    <string name="wait">Loading</string>
    <string name="show_your_love">Show your love for your favorite team by voting for it. Watch the full video to confirm your vote.</string>

    <string name="dialog_voted_title">Thank you for voting</string>
    <string name="dialog_voted_message">Twist with enough energy. Who knows this year the title goes to your heart selection</string>
    <string name="dialog_voted_button">Keep twisting</string>

    <string name="not_today">There will be no matches today</string>

    <string name="action_refresh">Refresh</string>

    <string name="winner_champion">Champion</string>
    <string name="winner_second_place">Vice Champion</string>
    <string name="winner_third_place">Third place</string>
    <string name="winner_fourth_place">Fourth place</string>

    <string name="first_worldcup_title">First World Cup Title</string>
</resources>
