<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/bt_today"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/menu_today"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/bt_groups_phase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/menu_groups"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/bt_finals_phase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/menu_finals"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/bt_fan_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:text="@string/menu_crowd"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</LinearLayout>